# nbody-hpc-simulation

./: .gitignore  CMakeLists.txt  README.md  aldas_mpi_reduced.cpp  aldas_mpi_version.cpp  glad.c  main.cpp
Nbodies/: bodies.hpp  euler.cpp  forces_serial.hpp  integrator.hpp  velocity_and_position_update.cpp
particle/: Particle.cpp  Particle.hpp
sequential/: aldas_mpi_version_base.cpp  basic  basic.cpp  input.txt  input_record.txt  output.txt  output_record.txt  reduced  reduced.cpp  test4_output.txt
src/: acceleration-accumulator.hpp  adaptive_dt.hpp  adaptive_timestep.hpp  basic.cpp  bodies.hpp  body.hpp  compare-outputs.cpp  core.hpp  forces_serial.hpp  generate-input.cpp  main.cpp  mpi-accumulator-reduced.hpp  mpi-accumulator.hpp  nbody-mpi-reduced.cpp  nbody-mpi.cpp  nbody-solver.hpp  omp_utils.hpp  reduced.cpp  serial-accumulator-reduced.hpp  serial-accumulator.hpp  serial.cpp  simulation.cpp  timer.hpp  utils.cpp  utils.hpp  vec.hpp
src/adaptive_time_step/: adaptive_dt.hpp  ats-nbody-mpi-reduced.cpp  ats-nbody-mpi.cpp  ats-serial.cpp
src/barnes_hut/: BHTree.hpp  barnesHutSolver.hpp  bhAccumulator.hpp  bodies.hpp
src/barnes_hut_serial/: BHTree.cpp  BHTree.hpp  bhAccumulator.hpp  main.cpp  old-main.cpp
src/forces/: coulomb.hpp  func.hpp  gravity.hpp
src/integrators/: euler.hpp  integrator.hpp  rk4.hpp  sympletic.hpp  velocity_and_position_update.cpp  verlet.hpp
src/mpiSolvers/: mpi-accumulator-reduced.hpp  mpi-accumulator.hpp  mpiReducedSolver.hpp  mpiSolver.hpp
src/serialSolvers/: serial-accumulator-reduced.hpp  serial-accumulator.hpp  serialReducedSolver.hpp  serialSolver.hpp
src/vis/: Camera.cpp  Camera.hpp  main.cpp
src/vis/camera/: Camera.cpp  Camera.hpp
src/vis/particle/: Particle.cpp  Particle.hpp
src/vis/renderBufferObjects/: ParticleBufferObject.cpp  ParticleBufferObject.hpp  RenderBufferObject.hpp  TraceBufferObject.cpp  TraceBufferObject.hpp
src/vis/shaders/: shader.cpp  shader.hpp
src/vis/shaders/glsl/: basic.frag  particle.frag  particle.vert
tests/: input.txt  input_record.txt  output_basic.txt  output_record.txt  test4_input.txt
tests/measure-time/: generate_inputs.sh  get_results_data.py
tests/measure-times/: plot_results.py  run_time_measurement.sh
